Add set group announce mode function
